--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -7,12 +7,12 @@
         overflow: hidden;
         background-color: #15202B;
         position: relative;
-        height: 50px;
+        height: 60px;
     }
 
     .logo-home {
         position: absolute;
-        width: 160px;
+        width: 200px;
         top: 6px;
         left: 4px;
     }
@@ -29,12 +29,13 @@
         display: flex;
         align-items: center;
         right: 10px;
+        top: 6px;
     }
 
     .links {
         color: whitesmoke;
         text-decoration: none;
-        margin-left: 10px;
+        
     }
 
     .links:hover {
