--- a/client/src/components/PostForm/PostForm.css
+++ b/client/src/components/PostForm/PostForm.css
@@ -7,29 +7,54 @@
         left: 0;
         bottom: 0;
         right: 0;
+        z-index: 1000;
+    }
+
+    .post-form-wrapper::-webkit-scrollbar{
+        max-width: 100%;
     }
 
     .post-form {
-        max-width: 768px;
+        max-width: 100%;
         
     }
 
     .title-input {
         color: white;
-        height: 40px;
+        height: 50px;
         width: 100%;
+        border: none;
+        outline: none;
+        font-size: 16px;
+        padding: 8px 4px 0px 4px;
     }
 
     .image-input {
         color: white;
-        height: 40px;
+        border: none;
         width: 100%;
+        outline: none;
+        font-size: 16px;
+        padding: 8px 4px 0px 4px;
     }
 
     .description-input {
         color: white;
-        height: 180px;
         width: 100%;
+        border: none;
+        outline: none;
+        overflow: hidden;
+        font-size: 16px;
+        padding: 8px 4px 0px 4px;
+    }
+
+    .comment-input {
+        display: none;
+    }
+
+    textarea::placeholder {
+        color: #1DA1F2;
+        font-size: 16px;
     }
 
     .post-button {
@@ -49,14 +74,24 @@
     }
 
     .post-button-container {
-        float: right;
-        position: relative;
-        top: 5px;
-        right: 8px;
+        position: fixed;
+        bottom: 40px;
+        right: 20px;
+        outline: none;
+        border-radius: 4px;
     }
 
     .post-button-container > button {
         outline: none;
         padding: 6px;
+        border: none;
+        background: #1DA1F2;
+        border: none;
+        border-radius: 4px;
+        margin-left: 10px;
+    }
+
+    post-button-container > button:hover {
+        cursor: pointer;
     }
 }
