--- a/client/src/components/PostForm/PostForm.css
+++ b/client/src/components/PostForm/PostForm.css
@@ -48,14 +48,14 @@
         padding: 8px 4px 0px 4px;
     }
 
-    .comment-input {
+    .comments-input1 {
         display: none;
     }
 
-    textarea::placeholder {
+    /* textarea::placeholder {
         color: #1DA1F2;
         font-size: 16px;
-    }
+    } */
 
     .post-button {
         color: white;
