--- a/client/src/components/Posts/Posts.css
+++ b/client/src/components/Posts/Posts.css
@@ -1,12 +1,12 @@
 @media screen and (max-width: 768px) {
 
     .post-wrapper {
-        border-bottom: 0.2px solid rgb(99, 98, 98);
+        border-bottom: 1px solid rgb(65, 63, 63);
         width: 100%;
         display: flex;
         flex-direction: column;
         align-items: left;
-        
+        padding-bottom: 6px;
     }
 
     .post-container {
@@ -64,25 +64,38 @@
         padding: 0 8px 0 8px;
     }
 
+    .comment-form {
+        padding-left: 6px;
+    }
+
     .comment-input {
-        width: 100%;
-        background-color: red;
-        border: 1px solid #1DA1F2;
+        min-width: 320px;
+        height: 48px;
         outline: none;
-        /* background-color: transparent; */
+        background-color: transparent;
         color: white;
-        font-size: 16px;
+        font-size: 18px;
+        border-radius: 5px;
+        padding: 10px 10px 0px 4px;
+        resize: none;
+        border: 1px solid rgb(65, 63, 63);
+    }
+
+    .comment-input::placeholder {
+        font-size: 20px;
+    }
+
+    .send-span {
+        padding-left: 5px;
+    }
+
+    .send-icon {
+        
         
     }
 
     .comment-icon {
         margin: 5px;
-    }
-
-    .send-icon {
-        float: right;
-        margin-right: 8px;
-        margin-top: -18px;
     }
 
     .like-icon {
