--- a/client/src/components/Posts/Posts.css
+++ b/client/src/components/Posts/Posts.css
@@ -69,7 +69,7 @@
     }
 
     .comment-input {
-        min-width: 320px;
+        min-width: 80%;
         height: 48px;
         outline: none;
         background-color: transparent;
