--- a/client/src/components/Posts/Posts.css
+++ b/client/src/components/Posts/Posts.css
@@ -89,10 +89,10 @@
         padding-left: 5px;
     }
 
-    .send-icon {
+    /* .send-icon {
         
         
-    }
+    } */
 
     .comment-icon {
         margin: 5px;
