--- a/client/src/components/PostForm/PostForm.css
+++ b/client/src/components/PostForm/PostForm.css
@@ -69,8 +69,8 @@
     }
 
     .post-button-container {
-        position: fixed;
-        bottom: 40px;
+        position: absolute;
+        bottom: 30px;
         right: 20px;
         outline: none;
         border-radius: 4px;
